@@ -4,6 +4,15 @@
 	(ipmi_lan_check_session_authcode): Fix parameter check.
 
 	* Globally change "passwd" to "password".
+
+	* libfreeipmi/src/ipmi-msg-interface-desc.h,
+	libfreeipmi/src/ipmi-msg-interface-desc.c: Removed files.
+
+	* libfreeipmi/src/ipmi-sensor-api.c (get_system_software_type):
+	New function.
+
+	* libfreeipmi/src/ipmi-sensor-api.c (get_sensor_reading): Use
+	get_system_software_type.
 	
 2006-02-17  Albert Chu <chu11@llnl.gov>
 
